--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Holiday Spirit</p>
+        <p>&copy; 2024 Magis-Tech, EWA Magis-Tech lessy babe</p>
     </footer>
     <script src="js/scrypt.js"></script>
 </body>
